--- a/app/less/main.less
+++ b/app/less/main.less
@@ -862,7 +862,7 @@ body{
 							}
 						}
 					}
-					/*popover for HOVER*/
+/*********************************popover for HOVER************************************/
 
 	
 		.popover,.popover-content{
@@ -928,7 +928,7 @@ body{
 		.popover.bottom>.arrow:after{
 			border-bottom-color: #fff;
 		}
-	/****************************************************************************/
+/*********************************end popover for HOVER************************************/
 
 				}
 				.qwe2{
@@ -1344,6 +1344,75 @@ body{
 			.not_m{
 				margin-top: 0;
 			}
+
+
+/*********************************popover for HOVER************************************/
+
+	
+		.popover,.popover-content{
+			background:#fff;
+			width:167px;
+			height:169px;
+			.small_popover{
+				
+				.img_pop_small{
+					background:url("/img/logo_bot.png") no-repeat;
+					width:96px;
+					height:46px;
+					vertical-align: middle;
+				}
+				span{
+					margin-top:10px;
+					.Bo;
+					font-size:13px;
+					text-transform: uppercase;
+					color: #000;
+					margin-left:1px
+
+				}
+				.mini_cd{
+					margin-top:5px;
+					display: inline-block;
+					.img_cd{
+						background:url("/img/icon-C.png") no-repeat;
+						width:20px;
+						height:20px;
+						display: inline-block;
+					}
+					span{
+						.Re;
+						font-size:13px;
+						color:#9b9aa4;
+						padding-left:5px;
+						text-align: center;
+						text-transform: none;
+						margin-top:0px
+					}
+				}
+				.money{
+					span{
+						.Bo;
+					font-size:13px;
+					text-transform: uppercase;
+					color: #000;
+					}
+				}
+				.cheng{
+					.Re;
+						font-size:13px;
+						color:#9b9aa4;
+						padding-top:10px;
+						text-align: center;
+
+						
+				}
+
+			}
+		}
+		.popover.bottom>.arrow:after{
+			border-bottom-color: #fff;
+		}
+/*********************************end popover for HOVER************************************/
 		}
 		
 	}
