--- a/app/less/main.less
+++ b/app/less/main.less
@@ -371,7 +371,7 @@ body{
 	}
 	.main{
 
-		min-height: 2330px;
+		min-height: 2440px;//cheng 2330
 		background-image: url("../img/BG-main.png");
 		.container{
 			.line0,.line1, .line2, .line3,  .line4, .line5, .line6, .line7, .line8, .line9, .line10,
@@ -523,7 +523,7 @@ body{
 				margin-left:0px;
 				padding-left:0px;
 				padding-right:0px;
-				    margin-left: -15px;//******************
+				    margin-left: 0px;//******test cheng posotoin-15
 
 			.tesrik{
 				margin-top:30px;
@@ -560,13 +560,13 @@ body{
 					
 			}	
 			.line0{
-				margin-left:4px;
+				margin-left:0px;//******test cheng posotoin 4
 				padding-left:0px;
 				padding-right:0px;
 				width:930px;
 				
 				
-				//.header_table{
+				
 				.row{
 					margin-top: 17px;
 					background: #323a4a;
@@ -631,7 +631,7 @@ body{
 		margin-top:0px;
 		padding-left:0px;
 		padding-right:0px;
-		margin-left:-15px;
+		margin-left:-4px;//******test cheng posotoin-15
 		width:1161px;
 		.qwe1{
 			    padding-left: 0px;
@@ -1147,14 +1147,18 @@ body{
 			}	
 		}
 	}
+/***********************HISTORY**************************/	
 	.row{
-		margin-left: 20px;
+		//margin-left: 20px;
 	    width: 1135px;
+	    
+	    margin-right: 0px;
 		.history{
 			background:#282f3d;
 			height:237px;
-			width: 1140px;
+			width: 1120px;//cheng 1140
 			padding-right: 0px;
+			margin-left: 18px;/***************cheng - **/
 			.img_history{
 				background:url("/img/Lineage_logo.jpg");
 				height: 204px;
@@ -1192,7 +1196,7 @@ body{
 					float: right;
 				    width: 85%;
 				    height: 50px;
-				    padding-left: 140px;
+				    padding-left: 130px;
 				    .pagination{
 				    	margin-bottom:0px;
 				    }
@@ -1207,22 +1211,25 @@ body{
 				.vk{
 					background:url("/img/vk.png");
 					height:205px;
-					width:205px;
+					width:195px;
 				}
 				.fb{
 					background:url("/img/fb.png");
 					height:205px;
-					width:205px;
+					width:195px;
 					margin-left: 15px;
 				}
 			}
 		}
 	}
+/***********************END HISTORY**************************/	
+/****************************PAGE FOOTER**********************/
 	.row{
-
+		margin-left: 13px;//cheng -
 		.page_footer{
 			display: inline-block;
 			padding-left:0px;
+			margin-left: 20px;/***************cheng - **/
 			span{
 				display: inline-block;
 				color: #fff;
@@ -1246,7 +1253,7 @@ body{
 			}
 		}
 		.right_link{
-			margin-left: 368px;//--------------------
+			margin-left: 358px;//cheng 368
 			padding-right: 0px;
 			a{
 				.De;
@@ -1274,7 +1281,7 @@ body{
 				}
 			}
 			.list_bot{
-				width: 1140px;
+				width: 1135px;
 				margin-top: 30px;
 				height: 50px;
 				background:#282f3d;
@@ -1457,6 +1464,9 @@ body{
 		margin-left:12px;
 		    margin-top: 5px;
 	}
+/****************************END PAGE FOOTER**********************/
+
+/**********************FOOTER*********************************/
 		footer{
 			height:255px;
 			background:#16191f;
@@ -1465,10 +1475,11 @@ body{
 				height:253px;
 				.row{
 					margin-top: 15px;
+					margin-left: 25px;//cheng -
 					width:1161px;
 					height:121px;
-					margin-left: 0px;
 					padding-left:0px;
+					padding-right:0px;
 
 					.col-md-5{
 						padding-left:0px;
@@ -1486,16 +1497,9 @@ body{
 								border-radius:20px;
 								text-decoration: none;
 								padding:5px 25px;
-
 							}
 
 						}
-						/* a:first-child{
-							margin-right:18px;
-						}
-						a:last-child{
-							margin-left:18px;
-						} */
 					}
 					.col-md-6:not(.social_fb){
 						margin-top: 10px;
@@ -1534,6 +1538,7 @@ body{
 						width:1141px;
 						height:50px;
 						border-bottom:1px solid #471418;
+						margin-left: 0px;//cheng -
 						a{
 							margin-left:10px;
 
@@ -1576,7 +1581,7 @@ body{
 				}
 			}
 		}
-
+/**********************FOOTER*********************************/
 }
 /* .popover-content{
 	width:220px;
